# librpiplc

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Makefile  PLCs.cmake  README.md  build.sh  cliff.toml  dpkg-buildpackage-arch.sh  generate_abi_files.sh  install.sh  prepare_cmake.sh  run_abi_check.sh
ABI Dumps/: librpiplc-arm64-v4.0.0.abi  librpiplc-arm64-v4.1.0.abi  librpiplc-armhf-v4.0.0.abi  librpiplc-armhf-v4.1.0.abi
debian/: changelog  control  copyright  librpiplc-dev.lintian-overrides  librpiplc-tests-gateberry-v9.install  librpiplc-tests-rpiplc-v3.install  librpiplc-tests-rpiplc-v4.install  librpiplc-tests-rpiplc-v6.install  librpiplc-tests-touchberry-pi-v1.install  librpiplc-tests-upsafepi-v6.install  librpiplc.install  librpiplc.lintian-overrides  librpiplc.postinst  librpiplc.postrm  librpiplc.preinst  rules
lib/: CMakeLists.txt
lib/include/: ads1015.h  gateberry-mapping-v9.h  i2c.h  ltc2309.h  mcp23008.h  pca9685.h  rpi-gpio.h  rpiplc-arduino.h  rpiplc-mapping-v3.h  rpiplc-mapping-v4.h  rpiplc-mapping-v5.h  rpiplc-mapping-v6.h  rpiplc-mapping.h  rpiplc-peripherals.h  rpiplc-version.h  rpiplc.h  touchberry-pi-mapping-v1.h  upsafepi-mapping-v6.h
lib/src/: ads1015.c  mcp23008.cpp  pca9685.cpp  peripherals-variables.c  rpi-gpio.c  rpiplc-arduino.c  rpiplc-peripherals.c  rpiplc-peripherals.cpp  rpiplc-version.c
src/: ads1015.c  ads1015.cpp  ads1015.h  i2c.c  i2c.cpp  i2c.h  ltc2309.cpp  ltc2309.h  mcp23008.c  mcp23008.cpp  mcp23008.h  pca9685.c  pca9685.cpp  pca9685.h  rpi-gpio.cpp  rpi-gpio.h  rpiplc-arduino.cpp  rpiplc-arduino.h  rpiplc-mapping.h  rpiplc-peripherals.cpp  rpiplc-peripherals.h  rpiplc-version.h  rpiplc.c  rpiplc.cpp  rpiplc.h
test/: CMakeLists.txt  analogBlink.c  analogBlink.cpp  analogRead.c  analogRead.cpp  analogWrite.c  common.h  delay.cpp  digitalBlink.c  digitalBlink.cpp  digitalRead.c  digitalRead.cpp  digitalWrite.c  get-analog-input.cpp  get-digital-input.cpp  pins_reference.h  set-analog-output.cpp
test/include/: common.h  find_pin.hpp  pins-references-v3.hpp  pins-references.hpp  pins_reference.h  pins_references.h  pins_references.hpp  pins_references_v3.h  pins_references_v4.h  pins_references_v4.hpp  pins_references_v5.hpp
test/src/: analogBlink.cpp  analogBlinkAll.cpp  analogRead.cpp  delay.cpp  digitalBlink.cpp  digitalBlinkAll.cpp  digitalRead.cpp  get-analog-input.cpp  get-digital-input.cpp  set-analog-output.cpp  set-digital-output.cpp
tests/: CMakeLists.txt
tests/RPIPLC/: CMakeLists.txt
tests/RPIPLC/src/: analogBlink.cpp  analogRead.cpp  digitalBlinkAll.cpp
tests/UPSAFEPI/: CMakeLists.txt
tests/UPSAFEPI/include/: find-pin.hpp  pins-references-v6.hpp  pins-references.hpp
tests/UPSAFEPI/src/: analogBlink.cpp  analogRead.cpp  digitalBlink.cpp  digitalRead.cpp  get-analog-input.cpp  get-digital-input.cpp  set-analog-output.cpp  set-digital-output.cpp  set-pwm-output.cpp
tests/include/: find-pin.hpp  pins-references-gateberry-v9.hpp  pins-references-touchberry-pi-v1.hpp  pins-references-upsafepi-v6.hpp  pins-references-v3.hpp  pins-references-v4.hpp  pins-references-v5.hpp  pins-references-v6.hpp  pins-references.hpp
tests/src/: analogBlink.cpp  analogBlinkAll.cpp  analogRead.cpp  delay.cpp  digitalBlink.cpp  digitalBlinkAll.cpp  digitalRead.cpp  get-analog-input.cpp  get-digital-input.cpp  getVersion.cpp  set-analog-output.cpp  set-digital-output.cpp  set-pwm-output.cpp
